--- a/Fraud Detection Log Regression/requirements.txt
+++ b/Fraud Detection Log Regression/requirements.txt
@@ -1,5 +1,5 @@
+numpy==1.24.3
+pandas==2.0.3
 scikit-learn==1.6.1
-pandas>=1.0.0
-numpy>=1.19.0
-joblib>=1.3.0
-streamlit>=1.0.0
+joblib==1.3.2
+streamlit==1.28.1
