--- a/fraud_detection/requirements.txt
+++ b/fraud_detection/requirements.txt
@@ -1,6 +1,6 @@
-joblib
-numpy
-pandas
-scikit-learn
+joblib==1.3.2
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.6.1
 streamlit>=1.40.0
 altair>=5.0.0
